# schema_code_with_O-n-_additions

./: .gitignore  Cargo.toml  README.md
src/: benchmark.rs  lib.rs  main.rs  types.rs  utils.rs
src/aos/: mod.rs  utils.rs
src/aos_core/: mod.rs
src/aos_parallel/: mod.rs  utils.rs
src/code/: ldpc_impl.rs  mod.rs
src/ui/: app.rs  constants.rs  localization.rs  log_viewer.rs  logging.rs  mod.rs  results_viewer.rs
src/ui/components/: decoder_selector.rs  header.rs  language_selector.rs  mod.rs  status_bar.rs
src/ui/results/: acceleration_tab.rs  details_tab.rs  mod.rs  phases_tab.rs  summary_tab.rs  table_builder.rs  utils.rs  visualization_tab.rs
src/ui/tabs/: about_tab.rs  configure_tab.rs  console_tab.rs  mod.rs  results_tab.rs
tests/: integration_tests.rs
