[package]
name = "schema_code"
version = "0.1.0"
edition = "2021"
description = "LDPC-based Additive Only Secret Sharing (AOS) scheme with sequential and parallel implementations"

[dependencies]
rand = "0.10.0"
ldpc-toolbox = "0.12.0"
ndarray = "0.17.2"
num-traits = "0.2.19"
# ldpc = "0.7.0"
sparse-bin-mat = "0.7.0"
indicatif = "0.18.4"
chrono = "0.4.44"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
humantime = "2.1.0"
rayon = "1.8.1"
# UI залежності
eframe = { version = "0.33.3", features = ["persistence"] }
egui_plot = "0.34.1"
egui_extras = "0.33.3"
rfd = "0.17.2"

[dependencies.winapi]
version = "0.3.9"
features = [
    "windef",
    "winuser",
    "wingdi",
    "winbase",
    "libloaderapi",
    "processthreadsapi",
    "shellapi",
]
